--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -4,7 +4,7 @@
 
 
 * {
-  font-family: 'Quicksand', 'Noto Sans Lao', sans-serif;
+  font-family: 'Roboto', 'Noto Sans Lao', sans-serif;
 }
 
 body {
@@ -12,12 +12,11 @@ body {
   margin: 0;
   padding: 0;
   font-size: 100%;
-  font-family: 'Quicksand', 'Noto Sans Lao', sans-serif;
+  font-family: 'Roboto', 'Noto Sans Lao', sans-serif;
   font: inherit;
   vertical-align: baseline;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: roboto;
   font-weight: 100, 300, 400, 500, 700, 900;
 
   input::-webkit-outer-spin-button,
